--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mine{
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+}
+
+.grade{
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.temp{
+  width: 100%;
+  text-align: center;
+  font-size: 36px;
+  text-shadow: 2px 2px #b6b6b6;
+}
+
+.button{
+  border-radius: 50%;
+  background-color: #54c257;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  width: 36px;
+  height: 36px;
+}
+
+.plus{
+  text-align: center;
+  width: 100%;
+  font-size: 24px;
+}
+
+.inputBotton{
+  border: 2px solid rgb(0, 0, 0);
+  padding: 3px;
+  border-radius: 25px;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  width: 100%;
+}
