--- a/src/index.css
+++ b/src/index.css
@@ -52,8 +52,8 @@ code {
   border-radius: 25px;
 }
 
-.row {
+/* .row {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  width: 100%;
-}
+  width: auto;
+} */
